fix for room title not showing descenders if only 1 line

--- a/src/server/resources/scss/main.scss
+++ b/src/server/resources/scss/main.scss
@@ -726,7 +726,7 @@ h1 {
     text-align: left;
     color: rgba(255, 255, 255, 0.8);
     transition: color 0.38s cubic-bezier(0.4, 0, 0.2, 1);
-    max-height: 72px;
+    height: 72px;
     overflow: hidden;
     text-overflow: ellipsis;
 }
